updated the <title>Horiseon Home</title>

--- a/challenge-1/Develop/index.html
+++ b/challenge-1/Develop/index.html
@@ -13,7 +13,7 @@
     <!--href destination of the hyperlink connect or work with other classes-->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--contains the name or the information that show in web tage like "New tab"-->
-    <title>website</title>
+    <title>Horiseon Home</title>
 </head>
 <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
 
